css global en cours de finalisation pour le mobile + html fini pour les pages de menus

--- a/style.css
+++ b/style.css
@@ -128,37 +128,55 @@ padding: 5px 10px 5px 10px;}
 
 .footerContain i
 {margin-right: 8px;}
-
-
-     
+/*pages menus*/
 .blocpageRestaurants 
 {
    padding: 0px;
 }
-/*HEADER restaurants*/  
-/*.restaurantsHeaders{
-    margin: 0px; padding: 20px 20px 15px 20px;
-}*/
+
 .back i {
     color: black; 
     text-decoration: none; font-size: 1.4em;
     position: absolute; left: 5vw; top: 3vh;
 } 
-
 /*Meal title*/
-.mealBloc {border-top-left-radius: 50px; border-top-right-radius: 50px;
+.mealBloc {
+    border-top-left-radius: 30px; border-top-right-radius: 30px;
 background-color: #f8f6f4;padding: 6vh 5vw 10vh 5vw; margin-top: -60px;}
 
-.mealPicture img {width: 100vw; height: 30vh;background-image: url(images/alafrançaise.jpg);}
+.mealPicture img {
+    width: 100%; height: 30vh;object-fit: cover;margin:auto;}
 
-.mealBloc h1 {font-family: 'Shrikhand';}
-.mealBloc h1 i {margin-left: 60px;} 
+.mealBloc h1 {
+    font-family: 'Shrikhand';margin-bottom: 0px;}
+
+.mealBloc h1 i {
+    margin-left: 60px;} 
 
 .mealBoxs 
-{margin: 15px 0px 0px 0px; border-radius:20px; padding: 5px 2vw 5px 2vw;
+{margin: 15px 0px 0px 0px; border-radius:14px; padding: 2px 2px 2px 2px;
 background-color: white;box-shadow:2px 2px 8px 3px #e0e0e0;
 position: relative;}
 
-.prices, .mealBoxs i{position:absolute; bottom:5px; right: 2vw;}
+.mealBloc h2{
+    padding-top:20px;margin-bottom: 3px;}
+
+.mealBloc .greenBorder{
+    width: 40px; border:solid 2px #99E2D0;}
+
+.mealBoxs h3, .mealBoxs p{
+    margin: 8px 8px 8px 8px;}
+
+.mealBoxs i{
+    visibility: hidden;}
+
+.prices {
+    position: absolute; right: 10px;} 
+
+.order {
+    padding: 40px 100px 0px 90px;} 
+
+.order button{
+    padding-left: 40px;padding-right:40px;}  
 
 }
