--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-@media all and (max-width: 767px) 
-{
 body{margin:0px;font-family: 'Roboto';}
 
 .blocMainPage
@@ -10,14 +8,15 @@ border-radius: 30px;padding:15px 20px 15px 20px;color:white;}
 
 header
 {padding: 20px 26vw 15px 26vw;background-color: #f8f6f4;
-position: relative;}
+position: relative; text-align:center;}
 /*SEARCH*/
 #searchBar1
 {background: linear-gradient(#D7D4D1,27%,#F2F2F2);
 border-bottom: solid 1.5px#D7D4D1;    
 margin: auto;
-padding:15px 33vw 15px 26vw;
-display: flex;} 
+padding:15px 50vw 15px 45vw;
+display: flex;
+} 
 
 .searchField
 {
@@ -25,32 +24,30 @@ display: flex;}
     padding:0px 15px 0px 15px;
     background-color: unset;
 } 
-
-/*RESA*/
-.resa
-{
-    padding:25px 15px 50px 10px;
-    text-align: center;
+/*RESA*/ 
+.resa {
     background-color: #f8f6f4;
-}    
+    text-align: center;
+    padding:25px 15px 50px 10px;
+}
+
 .resa h1
 {
     margin: 0px 12vw 10px 12vw;
 } 
 .resa p{margin: 0px 8vw 35px 8vw;} 
-
 /*Fonctionnement*/ 
-.fonctionnement 
-{
+.fonctionnement{
     padding: 15px 16px 30px 16px;
-    display:flex;flex-direction:column;
-    justify-content: space-between;
-} 
+}
+
+#fonctBloc{display:flex;flex-direction:row;
+    margin-left: 30px;}
 
 .fonctBoxs
 {
     padding:5px 20px 5px 20px;
-    margin:10px 0px 10px 9px; background-color:#f8f6f4;
+    margin:10px 25px 10px 9px; background-color:#f8f6f4;
     border-radius: 20px;box-shadow:2px 2px 7px #e0e0e0;
     position:relative;
 } 
@@ -70,9 +67,14 @@ display: flex;}
  }   
 
  .fonctBoxs p{color:black;}
-
 /*Section restaurantsPresentation*/
-.restaurantsPresentation
+
+.restaurants{
+    display: flex; flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+ .restaurantsPresentation
 {
     padding: 10px 16px 40px 16px; 
     width: auto; height:100%;
@@ -80,8 +82,8 @@ display: flex;}
 }
  .restaurants figure
  {
-    width: 90vw; height: 30vh; 
-    margin: 0px 0px 15px 0px; 
+    width: 45vw; height: 40vh; 
+    margin: 15px 0px 15px 0px; 
     border-radius: 20px;
     background-color: white;
     position: relative; 
@@ -113,6 +115,75 @@ padding: 5px 10px 5px 10px;}
     background-color: rgba(0, 0, 0, 0.795);
 }
 
+.footerContain ul{
+display: flex;
+text-align: center;
+margin-left: 25vw;}
+
+.footerContain li 
+{ 
+    list-style-type: none; 
+    margin:0px 30px 5px 0px;
+}
+
+.footerContain h3 
+{
+    font-family: 'Shrikhand';
+    font-size: 1.7em;
+    font-weight: 100;
+    font-stretch: extra-expanded;
+    text-align: center;
+}
+
+.footerContain i
+{margin-right: 8px;}
+
+@media all and (max-width:767px)
+{
+.searchBar1{padding-left: 20vw;padding-right: 20vw;}   
+/*Fonctionnement*/ 
+#fonctBloc 
+{
+    flex-direction:column; justify-content: space-between;
+    margin-left:0px;
+} 
+
+.fonctBoxs{margin-right:0;}
+
+/*Section restaurantsPresentation*/
+.restaurantsPresentation
+{
+    padding: 10px 16px 40px 16px; 
+    width: auto; height:100%;
+    background-color:#f8f6f4;
+}
+ .restaurants figure
+ {
+    width: 90vw; height: 30vh; 
+    margin-top:0px;
+} 
+
+/*FOOTER*/
+.footerContain 
+{
+    padding: 10px 0px 25px 0px;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.795);
+}
+
+.footerContain ul{
+    display:flex;
+    flex-direction: column;
+    text-align: unset;
+    margin-left:0px;
+}
+
+.footerContain h3{
+    margin-left:10vw;
+    font-size:1.3em;
+    text-align: unset;
+}
+
 .footerContain li 
 { 
     list-style-type: none; 
@@ -141,14 +212,17 @@ padding: 5px 10px 5px 10px;}
 } 
 /*Meal title*/
 .mealBloc {
-    border-top-left-radius: 30px; border-top-right-radius: 30px;
-background-color: #f8f6f4;padding: 6vh 5vw 10vh 5vw; margin-top: -60px;}
+    border-top-left-radius: 37px; border-top-right-radius: 37px;
+    background-color: #f8f6f4;padding: 2vh 5vw 10vh 5vw; margin-top: 25vh;
+    position: relative; z-index: 2;}
+
+.mealPicture{position: absolute; z-index: 1;}
 
 .mealPicture img {
-    width: 100%; height: 30vh;object-fit: cover;margin:auto;}
+    width: 100%; height: 30vh;object-fit: cover;margin:0;padding:0;} 
 
 .mealBloc h1 {
-    font-family: 'Shrikhand';margin-bottom: 0px;}
+    font-family: 'Shrikhand';margin: 14px 0px 0px 0px;}
 
 .mealBloc h1 i {
     margin-left: 60px;} 
@@ -173,8 +247,8 @@ position: relative;}
 .prices {
     position: absolute; right: 10px;} 
 
-.order {
-    padding: 40px 100px 0px 90px;} 
+.order {text-align: center;
+    padding-top: 40px;}
 
 .order button{
     padding-left: 40px;padding-right:40px;}  
