loading spinner au chargement de la page

--- a/style.css
+++ b/style.css
@@ -1,8 +1,109 @@
-body{margin:0px;font-family: 'Roboto';}
+body{margin:0px;font-family: 'Roboto';position: relative;
+    } 
 
-.blocMainPage
-{margin: auto; width: 100%;} 
+#blocMainPage
+{margin: auto; width: 100%;z-index:1;} 
 
+/*LOADING SPINNER*/ 
+#loaderBloc {
+    margin:auto; 
+    width:100vw; 
+    height: 100%;
+    position:absolute;
+    /*left: 35%;
+    right:35%;
+    top: 15%;*/
+    background-color: white;
+    z-index: 2;   
+    animation: opacity 0.1s forwards;
+    animation-duration: 0.5s;
+    animation-delay: 3s;
+} 
+@keyframes opacity { 
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
+} 
+
+
+.loader {
+    position: absolute;
+    position:fixed;
+    margin: auto;
+    width: 200px;
+    height: 200px;
+    top: 30%; 
+    right: 35%; 
+    left: 35%;
+    border-radius: 50%;
+    background: linear-gradient(#9356DC, #FF79DA);
+    animation: animate 0.8s linear infinite;
+}
+
+#loaderBloc img{
+    position: absolute; 
+    position:fixed;
+    top: 42%; 
+    right: 44%; 
+    left: 44%;
+    z-index: 2; 
+    width: 160px;
+    animation: pulse 7s forwards; 
+} 
+
+@keyframes pulse {
+    0% {transform:scale(1);
+    }
+    100% {transform:scale(1.1);}
+}
+
+@keyframes animate {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    } 
+}
+         
+.loader span {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background: linear-gradient(#9356DC, #FF79DA);
+}
+
+.loader span:nth-child(1) {
+    filter: /*blur*/(2.5px);
+}
+
+.loader span:nth-child(2) {
+    filter: blur(5px);
+}
+
+.loader span:nth-child(3) {
+    filter: /*blur*/(12.5px);
+}
+
+.loader span:nth-child(4) {
+    filter: blur(25px);
+}
+
+.loader:after {
+    content: '';
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    right: 10px;
+    bottom: 10px;
+    background: whitesmoke;
+    border: solid #FF79DA 1px;
+    border-radius: 50%;
+}
 
 /*ANIMATIONS BOUTTONS*/
 .buttons {
@@ -149,10 +250,12 @@ padding: 5px 10px 5px 10px;}
     font-stretch: extra-expanded;
 }
 
-.footerContain i
-{margin-right: 8px;}
+.footerContain i{
+    margin-right: 8px;}
 
-.footerLinks a{text-decoration:none; color:white;}
+.footerLinks a{
+    text-decoration:none; 
+    color:white;}
 
 @media all and (min-width: 768px) and (max-width:1023px)
 {
@@ -161,6 +264,23 @@ padding: 5px 10px 5px 10px;}
 
 @media all and (max-width:767px)
 {
+
+    #loaderBloc {
+        left: 18%;
+        right:18/%;
+        top: 10%;
+       } 
+    
+    .loader {
+        width: 150px;
+        height: 150px;
+    }
+    
+    #loaderBloc img{
+        top: 65px;
+        left: 12%; right: 12%;
+        width: 127px;}
+
 .searchBar1{padding-left: 20vw;padding-right: 20vw;}   
 /*Fonctionnement*/ 
 #fonctBloc 
