--- a/styles.css
+++ b/styles.css
@@ -111,79 +111,33 @@ position: relative;
  display: flex; 
 flex-direction: row;
 align-items:center;
-   /*animation: fadein 3s forwards;*/
-   -webkit-animation: fadein 3.5s forwards;
-   animation-duration: 0.75s;
-   opacity: 0; 
+animation: fadein 0.7s forwards;
+opacity: 0; 
 }
 
-.mealBoxs:hover .info_meal{
-    width: 60%;
-}
-
-.mealBoxs:hover .prices{
-  animation: translate_prices 0.4s forwards;
-}
-
-.mealBoxs:hover .check{
-  animation: translate_check 0.5s forwards;
-  visibility: visible;
-}
-
-@keyframes translate_prices{
-   0%{
-    right:2%;
-   }
-   100%{
-    right:24%;
-   }
-}
-
-@keyframes translate_check{
-    0%{
-        width:0%;    
-    }
-    100%{
-        width:18%;
-    }
-}
-.mealBoxs:hover .check i{
-    animation: check_rotate 0.4s forwards;
-}
-
-@keyframes check_rotate{
-    0%{
-        transform: rotate(0deg);
-        font-size:0em;
-    }
-    100%{
-        transform: rotate(360deg); 
-        font-size: 0.8em;
-    }
-}
 .starter1{
     animation-delay: 0.35s;} 
     
     .starter2{
-        animation-delay: 0.5s;}
+        animation-delay: 0.55s;}
     
     .starter3{
-        animation-delay: 0.7s;} 
+        animation-delay: 0.75s;} 
     
     .starter4{
-        animation-delay: 0.9s;} 
+        animation-delay: 0.95s;} 
     
-    .m_meal1{animation-delay: 1.1s;}
+    .m_meal1{animation-delay: 1.15s;}
     
-    .m_meal2{animation-delay: 1.3s;}
+    .m_meal2{animation-delay: 1.35s;}
     
-    .m_meal3{animation-delay: 1.5s;}
+    .m_meal3{animation-delay: 1.55s;}
     
-    .dessert1{animation-delay: 1.7s;} 
+    .dessert1{animation-delay: 1.75s;} 
     
-    .dessert2{animation-delay: 1.9s;} 
+    .dessert2{animation-delay: 1.95s;} 
     
-    .dessert3{animation-delay: 2.1s;} 
+    .dessert3{animation-delay: 2.15s;} 
 
 
 @keyframes fadein {
@@ -194,15 +148,6 @@ align-items:center;
         opacity:1;
     }
 } 
-
-/*@-webkit-keyframes fadein { 
-    from {
-        opacity:0;
-    }
-    to {
-        opacity:1;
-    }
-}  */
 
 .mealBloc h2{
     padding-top:20px;
@@ -224,6 +169,10 @@ align-items:center;
     padding: 0.35rem 0.2rem;
     overflow: hidden;
     width:82%;
+}
+
+.mealBoxs:hover .info_meal{
+    width: 60%;
 }
 
 .check{
@@ -256,6 +205,48 @@ align-items:center;
     position: absolute; 
     right: 2%;
 } 
+
+.mealBoxs:hover .prices{
+  animation: translate_prices 0.4s forwards;
+}
+
+@keyframes translate_prices{
+    0%{
+     right:2%;
+    }
+    100%{
+     right:24%;
+    }
+ }
+
+.mealBoxs:hover .check{
+  animation: translate_check 0.5s forwards;
+  visibility: visible;
+}
+
+@keyframes translate_check{
+    0%{
+        width:0%;    
+    }
+    100%{
+        width:18%;
+    }
+}
+
+.mealBoxs:hover .check i{
+    animation: check_rotate 0.4s forwards;
+}
+
+@keyframes check_rotate{
+    0%{
+        transform: rotate(0deg);
+        font-size:0em;
+    }
+    100%{
+        transform: rotate(360deg); 
+        font-size: 0.8em;
+    }
+}
 
 .order {text-align: center;
     padding-top: 40px;}
